infra/comment-moderation-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-moderation-depl
spec:
  selector:
    matchLabels:
      app: comment-moderation-service
  template:
    metadata:
      labels:
        app: comment-moderation-service
    spec:
      containers:
      - name: comment-moderation-service
        image: gkibria121/comment-moderation-service
        imagePullPolicy: Never
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m" 


---


apiVersion: v1
kind: Service
metadata:
  name: comment-moderation-service
spec:
  selector:
    app: comment-moderation-service
  ports:
  - port: 3000
    targetPort: 3000
