infra/query.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-service
spec:
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: gkibria121/query-service
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m" 


---


apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  selector:
    app: query
  ports:
  - port: 3000
    targetPort: 3000
