infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv

spec:
  ingressClassName: nginx
  rules:
    - host: posts.com
      http:
        paths: 
        - path: /api/events
          pathType: Prefix
          backend:
            service:
              name: event-bus
              port: 
                number: 3000  

        - path: /api/comments
          pathType: Prefix
          backend:
            service:
              name: comment-service
              port: 
                number: 3000
        - path: /api/posts/create
          pathType: Prefix
          backend:
            service:
              name: post-service
              port: 
                number: 3000
        - path: /api/posts
          pathType: Prefix
          backend:
            service:
              name: query-service
              port: 
                number: 3000 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port: 
                number: 3000
